--- a/public/index.html
+++ b/public/index.html
@@ -120,9 +120,14 @@
             margin-bottom: -1px;
         }
         </style>
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-corner/dist/fork-corner.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/fork-corner/dist/fork-corner.min.js" defer></script>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
+        <a href="https://github.com/ortizman/postman1066" target="_blank" id="fork-corner" class="fork-corner fc-pos-tr fc-animate fc-theme-git"></a>
+        
         <div id="root"></div>
     </body>
 
